# snotelpy

./: .coverage  .gitignore  404.html  Examples.ipynb  LICENSE.txt  README.md  fetch.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  yamlconvert.py
.github/workflows/: docs.yml  tests.yml
Examples/: Examples.ipynb  benchmark.py
Tests/: test_core.py
api/basin/: index.html
api/fetch/: index.html
docs/api/: basin.md  fetch.md
references/: data_CO_602_PREC.json  response_1774577266694.json
search/: search_index.json
snotelpy/: ELEMENTS.yaml
snotelpy_ens/: Config.py  fetch.py
src/snotelpy/: Config.py  __init__.py  basin.py  fetch.py  plot.py
tests/: conftest.py  test_fetch.py  test_parse_dates.py  test_save.py  test_stations.py
