[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snotelpy"
version = "0.1.0"
description = "SNOTEL data api for xarray integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">= 3.9"
authors = [
    {name = "Tate Voeller", email = "tavo7876@colorado.edu"},
]
dependencies = [
    "numpy >= 1.22",
    "matplotlib >= 3.5",
    "requests >= 2.31",
    "pandas >= 2.0",
    "xarray >= 2023.1",
    "pyyaml >= 6.0",
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.scripts]
run-snotelpy = "snotelpy.snotel_ensemble:main"