[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snotelpy"
version = "0.1.0"
description = "SNOTEL API Wrapper for the NRCS RESTful API for quick dataset/dataframe building"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">= 3.9"
authors = [
    {name = "Tate Voeller", email = "tavo7876@colorado.edu"},
]
dependencies = [
    "numpy >= 1.22",
    "matplotlib >= 3.5",
    "requests >= 2.31",
    "pandas >= 2.0",
    "xarray >= 2023.1",
    "pyyaml >= 6.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0"
]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["snotelpy"]